WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
155543
[mac] Printing test snapshots are upside-down after
r198242
https://bugs.webkit.org/show_bug.cgi?id=155543
Summary
[mac] Printing test snapshots are upside-down after r198242
Tim Horton
Reported
2016-03-16 08:50:54 PDT
Printing seems to use software snapshotting, and is for some reason flipped (meaning I must have missed a hisorical step in
r198242
's changelog. Here are the failing tests: Regressions: Unexpected image-only failures (3) printing/quirks-percentage-height-body.html [ ImageOnlyFailure ] printing/quirks-percentage-height.html [ ImageOnlyFailure ] printing/standards-percentage-heights.html [ ImageOnlyFailure ]
Attachments
Patch
(4.79 KB, patch)
2016-03-16 13:35 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2016-03-16 08:56:09 PDT
When these tests were added (
r141459
), we were in the same state we are in today (no flipping in WKTR). Something must have regressed elsewhere in the meantime, or something.
Tim Horton
Comment 2
2016-03-16 08:59:10 PDT
http://trac.webkit.org/changeset/190306
looks highly suspicious to me.
Tim Horton
Comment 3
2016-03-16 09:02:56 PDT
> When these tests were added (
r141459
), we were in the same state we are in today (no flipping in WKTR). Something must have regressed elsewhere in the meantime, or something.
ACTUALLY, when these tests were added they were immediately skipped in Mac WebKit2 and then not unskipped until
r190306
(by which time the WKTR flipping logic had been broken, and they were only passing because of that).
Ryan Haddad
Comment 4
2016-03-16 09:58:35 PDT
I have temporarily skipped these tests in <
http://trac.webkit.org/projects/webkit/changeset/198285
>
Tim Horton
Comment 5
2016-03-16 13:35:33 PDT
Created
attachment 274217
[details]
Patch
WebKit Commit Bot
Comment 6
2016-03-16 14:31:04 PDT
Comment on
attachment 274217
[details]
Patch Clearing flags on attachment: 274217 Committed
r198302
: <
http://trac.webkit.org/changeset/198302
>
WebKit Commit Bot
Comment 7
2016-03-16 14:31:08 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug