[mac] Printing test snapshots are upside-down after r198242 https://bugs.webkit.org/show_bug.cgi?id=155543

Reviewed by Simon Fraser.

Source/WebCore:

* page/PrintContext.cpp:
(WebCore::PrintContext::spoolAllPagesWithBoundaries):
Stop PLATFORM(COCOA)-conditionally flipping here. Just paint.
This function is only used by the test runners so this doesn't have a
huge impact on anything else.

Tools:

* DumpRenderTree/mac/PixelDumpSupportMac.mm:
(createPagedBitmapContext):
Flip printing snapshots in DRT so that everything is right-side-up.

LayoutTests:

* TestExpectations:
Re-un-skip these tests.


Canonical link: https://commits.webkit.org/173678@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198302 268f45cc-cd09-0410-ab3c-d52691b4dbfc